--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,12 @@ cache:
   before_script:
     - export SONAR_TOKEN=${SONAR_TOKEN}
   script:
-    - sonar-scanner -Dsonar.projectKey=$CI_PROJECT_NAME -Dsonar.sources=. -Dsonar.host.url=$SONAR_HOST_URL
+    sonar-scanner \
+    -Dsonar.projectKey=$CI_PROJECT_NAME \
+    -Dsonar.sources=. \
+    -Dsonar.java.binaries=target/classes \
+    -Dsonar.host.url=$SONAR_HOST_URL
+    -Dsonar.login=$SONAR_TOKEN
   artifacts:
     reports:
       sast: reports/sonarqube-report.xml
