--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ cache:
     -Dsonar.projectKey=$CI_PROJECT_NAME \
     -Dsonar.sources=. \
     -Dsonar.java.binaries=target/classes \
-    -Dsonar.host.url=$SONAR_HOST_URL
+    -Dsonar.host.url=$SONAR_HOST_URL \
     -Dsonar.login=$SONAR_TOKEN
   artifacts:
     reports:
